--- a/config.json
+++ b/config.json
@@ -1,13 +1,19 @@
 {
-  "MCBOT": "MHDDoS_",
-  "MINECRAFT_DEFAULT_PROTOCOL": 47,
-  "proxy-providers": [
+  "check-site": "https://www.google.com",
+  "proxy-type": "http",
 
-		{"type":4, "url": "https://raw.githubusercontent.com/TheSpeedX/PROXY-List/refs/heads/master/socks4.txt",  "timeout": 5},
-
-		{"type":5, "url": "https://raw.githubusercontent.com/TheSpeedX/PROXY-List/refs/heads/master/socks5.txt",  "timeout": 5},
-
-		{"type":1, "url": "https://raw.githubusercontent.com/TheSpeedX/PROXY-List/master/http.txt",  "timeout": 5}
-		
-	]
+  "http_threads": 8000,
+  "headers": {
+    "user-agent": "Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/102.0.5005.115 Safari/537.36",
+    "accept": "text/html,application/xhtml+xml,application/xml;q=0.9,image/avif,image/webp,image/apng,*/*;q=0.8"
+  },
+  "print_ips": {
+    "enabled": true,
+    "display-ip-info": true
+  },
+  "timeout": {
+    "http_timeout": 8,
+    "socks4_timeout": 8,
+    "socks5_timeout": 8
+  }
 }
